--- a/menu.html
+++ b/menu.html
@@ -1,40 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Javajam Coffee Bar Menu</title>
-<meta charset="utf-8">
-<link href="javajam.css" rel="stylesheet">
+<title>JavaJam Coffee Bar Menu</title>
+<meta charset="utf-8"
+     <link href="javajam.css" rel="stylesheet">
 </head>
 <body>
-<div id="wrapper">
-  <header>
-    <h1>JavaJam Coffee Bar</h1>
-  </header>
-  <nav>
-    <a href="index.html">Home</a> &nbsp;
-    <a href="menu.html">Menu</a> &nbsp;
-    <a href="music.html">Music</a> &nbsp;
-    <a href="jobs.html">Jobs</a>
-  </nav>
-  <main>
-  <img src="mugs.jpg" alt="coffee mugs" align="right" width="400" height="299">
-    <h2>Coffee at JavaJam</h2>
-        <p>Indulge in our locally roasted free-trade coffee and enjoy the aroma, the smooth taste,
-the caffeine! Join our Mug Club and get a 10% discount on each cup of coffee you
-purchase &mdash; ask the barista for details.</p>
-    <dl>
-      <dt><strong>Just Java</strong></dt>
-      <dd>Regular house blend, decaffeinated coffee, or flavor of the day.<br>Endless Cup $3.50</dd>
-      <dt><strong>Cafe au Lait</strong></dt>
-      <dd>House blended coffee infused into a smooth, steamed milk.<br>Single $4.00 Double $5.00</dd>
-      <dt><strong>Iced Cappuccino</strong></dt>
-      <dd>Sweetened espresso blended with icy-cold milk and served in a chilled glass.<br>Single $5.00 Double $6.50</dd>
-    </dl>
-  </main>
-  <footer>
+  <div id="wrapper">
+<header>
+     <h1><a href="index.html">JavaJam coffee Bar</a></h1>
+</header>
+<nav>
+ <ul>
+<li><a href="index.html">Home</a></li>
+      <li><a href="menu.html">Menu</a></li>
+      <li><a href="music.html">Music</a></li>
+      <li><a href="jobs.html">Jobs</a><li>
+     </ul>
+       </nav>
+<main>
+     <div id="heromugs">
+     </div>
+     <h2Coffee at JavaJam</h2>
+     <p>Indulge in our locally roasted free-trade coffee and enjoy the aroma,the smooth taste,
+          the caffeine! Join our Mug Club and get a 10% discounts on each cup of coffee you
+          purchase &mdash; ask the barista for details.</p>
+     <section class="onethird">
+          <h3>Just Java</h3>
+          <p>Regular house blend, decaffeinated coffee, or flavor of the day.<br>Endless Cup $3.50</p>
+     </section>
+     <section class="onethird">
+          <h3>Cafe au Lait</h3>
+          <p>House blended coffee infused into a smooth, steamed milk.<br>Single $4.00 Double $5.00</p>
+     </section>
+     <section class="onethird">
+          <h3>Iced Cappuccino</h3>
+          <p>Sweetened espresso blended with icy-cold milk and served in a chilled glass.<br>Single $5.00 Double $6.50</p>
+     </section>
+</main>
+<footer>
 Copyright &copy; 2020 JavaJam Coffee Bar<br>
-<a href="mailto:nmenjiv38@bbrook.k12.nj.us">nmenjiv38@bbrook.k12.nj.us</a>
-  </footer>
-</div>
+<a href="mailto:yourfirstname@yourlastname.com">yourfirstname@yourlastname.com</a>
+</footer>
+  </div>
 </body>
 </html>
