--- a/music.html
+++ b/music.html
@@ -27,7 +27,7 @@
 11 pm for some music you won't want to miss!</p>
 <h4>Januray</h4>
 <div class=details">
-<a href="melanie.jpg">img src="melaniethumb.jpg" alt="Melanie" width="100" height="100"></a>
+<a href="melanie.jpg"><img src="melaniethumb.jpg" alt="Melanie" width="100" height="100"></a>
 <p>Melanie Morris entertains with her melodic folk style.</p>
 </div>
 <h4>February</h4>
