--- a/music.html
+++ b/music.html
@@ -14,8 +14,8 @@
 <nav>
 <ul>
 <li><a href="index.html">Home</a></li>
-<li><a href="menu.html"<Menu</a></li>
-<li><a href="music.html"<Music</a></li>
+<li><a href="menu.html">Menu</a></li>
+<li><a href="music.html">Music</a></li>
 <li><a href="jobs.html">Jobs</a><li>
 </ul>
 </nav>
