--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <title><JavaJam Coffee Bar</title>
 <meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- MAKE SURE YOU INCLUDE-->
+<meta name="viewport" content=width=device-width, initial-scale=1.0> <!-- MAKE SURE YOU INCLUDE-->
 <link href="javajam.css" rel="stylesheet">
 </head>
 <body>
