--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <title><JavaJam Coffee Bar</title>
 <meta charset="utf-8">
-<meta name="viewport" content=width=device-width, initial-scale=1.0> <!-- MAKE SURE YOU INCLUDE-->
+<meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- MAKE SURE YOU INCLUDE-->
 <link href="javajam.css" rel="stylesheet">
 </head>
 <body>
@@ -15,7 +15,7 @@
 <ul>
 <li><a href="index.html">Home</a></li>
 <li><a href="menu.html">Menu</a></li>
-</li><a href="music.html">Music</a></li>
+<li><a href="music.html">Music</a></li>
 <li><a href="jobs.html">Jobs</a></li>
 </ul>
 </nav>
