--- a/menu.html
+++ b/menu.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en"
+<html lang="en">
 <head>
 <title>JavaJam Coffee Bar Menu</title>
 <meta charset="utf-8">
-<meta name="viewport" content=width=device-width, inital-scale=1.0">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">  
 <link href="javajam.css" rel="stylesheet">
 </head>
 <body>
@@ -14,7 +14,7 @@
 <nav>
 <ul>
 <li><a href="index.html">Home</a></li>
-<li><a href="menu.html">Menu</a></li>
+<li><a href="menu.html">Menu</a></li> 
 <li><a href="music.html">Music</a></li>
 <li><a href="jobs.html">Jobs</a></li>
 </ul>
@@ -24,26 +24,27 @@
 </div>
 <h2>Coffee at JavaJam</h2>
 <p>Indulge in our locally roasted free-trade coffee and enjoy the aroma, the smooth taste,
-the caffeine! Join our Mug Club and get a !0% discount on each cup of coffee you
+the caffeine! Join our Mug Club and get a 10% discount on each cup of coffee you
 purchase &mdash; ask the barista for details.</p>
 <div id="flow">
-<section>
-<h2>Just Java</h3>
-<p>Regular house blend, decaffeinated coffee, or flaovr of the day.<br>Endless Cup $3.50</p>
-</section>
-<section>
-<h3>Cafe au Lait</h3>
-<p>House blended coffee infused into a smooth, steamed milk.<br>Single $4.00 Double %5.00</p>
-</section>
-<section>
-<h3>Iced Cappuccino</h3>
-<p>Sweetened espresso blended with icy-cold milk and served in a chilled glass.<br>Single $5.00 Double $6.50</p>
-</section>
+<table>
+<tr>
+<th>Just Java</th>
+<td>Regular house blend, decaffeinated coffee, or flavor of the day.<br>Endless Cup $3.50</td>
+</tr>
+<tr>
+<th>Cafe au Lait</th>
+<td>House blended coffee infused into a smooth, steamed milk.<br>Single $4.00 Double $5.00</td>
+</tr>
+<tr>
+<th>Iced Cappuccino</th>
+<td>Sweetened espresso blended with icy-cold milk and served in a chilled glass.<br>Single $5.00 Double $6.</td>
+</table>
 </div>
 </main>
 <footer>
 Copyright &copy; 2020 JavaJam Coffee Bar<br>
-<a href="mailto:yourfirstname@yourlast.com">yourfirstname@yourlastname.com</a>
+<a href="mailto:yourfirstname@yourlastname.com">yourfirstname@yourlastname.com</a>
 </footer>
 </div>
 </body>
